    Baltagi/Feng/Kao (2012).
  * groupGenerics now used for 'pseries' objects, implemented as a wrapper 
    for methods in groups 'Math', 'Ops' and 'Complex' (see ?groupGeneric).
    Thus, propagation to a higher or lower data type works correctly when 
    performed on pseries, e.g. c("pseries", "integer") is propagated
    to c("pseries", "numeric") if an operation returns a decimal.
  * as.data.frame.pdata.frame gained argument 'keep.attributes'.
  * [.pdata.frame: in case a single column, i.e., a pseries is returned, this 
    pseries now has names (now consistent to extraction by $.pdata.frame and
    [[.pdata.frame).
  * is.pseries: added function to check if an object qualifies as a pseries.
  * (internal) is.index, has.index: new non-exported functions to check if an
    object is or has a proper index (in the sense of the plm package).
  * pdata.frame: fixed bug so that pdata.frames with only one column can be 
    created if drop.index = TRUE is set.
  * pvar: added method for pseries.
  * pmodel.response, fitted.plm, residuals.plm: for "between" and "fd" models, 
    a pure numeric is returned, not an 'illegal' pseries anymore (these models 
    compress data where having an index/pseries is useless and misleading).
  * pvcm: residuals are now of class c("pseries", "numeric")
    (before: "numeric" for within, "matrix" with one column for random model).
  * print.pseries: prettier printing for c("pseries", "complex").
  * summary.plm: removed support for ill-named argument '.vcov', instead use
    'vcov'. '.vcov' has been deprecated in plm 1.6-4 on CRAN since 2016-11-30.


Changes in version 1.6-6

  * ercomp:
      * re-written to be a more general framework.
      * (internal) returned ercomp object: component 'sigma2' is now a numeric;
        component 'theta' is now either a numeric (balanced models) or a list with 
        numerics (unbalanced models), the numerics being of length 1 (one-way models)